# Change Log
Changelog for LaOS project, inspired on: http://keepachangelog.com

## Unreleased

## 2015-03-18 (laoslaser-2015-03-18.bin)
- added python-colorama to README
- updated mbed.patch to match new mbed subrepository
- updated mbed subrepository to latest version

## 2015-02-23 (laoslaser-2015-02-23.bin / laoslaser-23-02-2015.bin)
Also see: 
http://redmine.laoslaser.org/boards/3/topics/765
https://github.com/LaosLaser/Firmware/pull/42
### Added
- Boundaries ("BOUNDARIES" in menu)
- Lasertest ("LASER TEST" in menu)
- Make current position the origin functionality ("ORIGIN" in menu)
- Machine boundaries limit checking
### Fixed
- Incorrect path for netmask (issue #44)

## 2014-11-14 (laoslaser-2014-11-14.bin / laoslaser-14-11-2014.bin)
### Fixed
- Engrave speed setting (see: http://redmine.laoslaser.org/boards/3/topics/841?r=847)
- Cancel button (see: http://redmine.laoslaser.org/boards/3/topics/833) 
- Laser misfiring (see: http://redmine.laoslaser.org/boards/1/topics/747)